k8s/03-order-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-db
  namespace: microservices-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-db
  template:
    metadata:
      labels:
        app: order-db
    spec:
      containers:
        - name: order-db
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: order-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: order-db
  namespace: microservices-lab
spec:
  selector:
    app: order-db
  ports:
    - port: 5432
      targetPort: 5432
