k8s/06-eureka-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: microservices-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: microservices-lab-eureka-server:latest
          imagePullPolicy: Never # la imagen ya esta cargada en minikube, no la busques en Docker Hub
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: microservices-lab
spec:
  selector:
    app: eureka-server
  ports:
    - port: 8761
      targetPort: 8761
