k8s/09-auth-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server
  namespace: microservices-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      containers:
        - name: auth-server
          image: microservices-lab-auth-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-server
  namespace: microservices-lab
spec:
  selector:
    app: auth-server
  ports:
    - port: 9000
      targetPort: 9000
