k8s/11-order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-api
  namespace: microservices-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-api
  template:
    metadata:
      labels:
        app: order-api
    spec:
      containers:
        - name: order-api
          image: microservices-lab-order-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: microservices-lab
spec:
  selector:
    app: order-api
  ports:
    - port: 8081
      targetPort: 8081
